--- a/exercises/week6/dj-box-react/package.json
+++ b/exercises/week6/dj-box-react/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "counter-review",
+  "name": "dj-box-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
+    "react-audio-player": "^0.6.0",
     "react-autobind": "^1.0.6",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-sound": "^0.6.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
