--- a/exercises/week6/forms-intro/package.json
+++ b/exercises/week6/forms-intro/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
+    "react-autobind": "^1.0.6",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
