--- a/exercises/week9/second-express-server/package.json
+++ b/exercises/week9/second-express-server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "cors": "^2.8.4",
+    "express": "^4.15.3",
+    "uuid": "^3.1.0"
   }
 }
